# aegismcp

./: Cargo.toml  README.md
crates/aegis-cli/: Cargo.toml
crates/aegis-cli/src/: main.rs
crates/aegis-cli/tests/: exfiltration_test.rs
crates/aegis-cli/tests/fixtures/: vulnerable_server.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/application/: proxy.rs
crates/aegis-core/src/domain/: jsonrpc.rs  policy.rs
crates/aegis-core/src/ports/: interceptor.rs  sandbox.rs
crates/aegis-proxy/: Cargo.toml
crates/aegis-proxy/src/: lib.rs  stdio_proxy.rs
crates/aegis-sandbox/: Cargo.toml
crates/aegis-sandbox/src/: landlock.rs  lib.rs  macos.rs  seccomp.rs
