[package]
name = "aegis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI entrypoint for AegisMCP security daemon"

[[bin]]
name = "aegismcp"
path = "src/main.rs"

[[bin]]
name = "vulnerable-server"
path = "tests/fixtures/vulnerable_server.rs"

[dependencies]
aegis-core = { path = "../aegis-core" }
aegis-proxy = { path = "../aegis-proxy" }
aegis-sandbox = { path = "../aegis-sandbox" }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
