[package]
name = "aegis-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core domain logic for AegisMCP security daemon"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
glob-match = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
